k8s/sites/cardiani/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    metadata:
      labels:
        site: cardiani
    spec:
      containers:
        - name: frontend
          image: multi/frontend-nextjs:latest
