k8s/sites/cardiani/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cardiani-ingress
  namespace: cardiani
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cardiani.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
